# GhostEscape

./: .gitignore  CMakeLists.txt
src/: Player.h  main.cpp  player.cpp  scene_main.cpp  scene_main.h
src/Core/: actor.h  game.h  object_screen.h  object_world.cpp  scene.h
src/core/: game.cpp  game.h  object.h  object_world.h  scene.h
